Fix file table wrapping in Firefox

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,6 +176,9 @@ dl dd {
 .filetable pre {
   padding: 0px;
   margin: 0px;
+}
+
+.filetable pre, .filetable td:last-child {
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
